tf-project/main.tf
resource "aws_vpc" "myvpv" {
  cidr_block = var.cidr
}

resource "aws_subnet" "subnet1" {
  vpc_id = aws_vpc.myvpv.id
  cidr_block = "10.0.0.0/24"
  availability_zone = "us-east-2a"
  map_public_ip_on_launch = true
}

resource "aws_subnet" "subnet2" {
  vpc_id = aws_vpc.myvpv.id
  cidr_block = "10.0.1.0/24"
  availability_zone = "us-east-2b"
  map_public_ip_on_launch = true
}


resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.myvpv.id
}

resource "aws_route_table" "RT" {
  vpc_id = aws_vpc.myvpv.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }
}

resource "aws_route_table_association" "rta1" {
  subnet_id = aws_subnet.subnet1.id
  route_table_id = aws_route_table.RT.id
}


resource "aws_route_table_association" "rta2" {
  subnet_id = aws_subnet.subnet2.id
  route_table_id = aws_route_table.RT.id
}


resource "aws_security_group" "mysg" {
  name        = "websg"
  vpc_id = aws_vpc.myvpv.id

  ingress {
    description = "HTTP from VPC"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "SSH"
    from_port       = 22
    to_port         = 22
    protocol        = "tcp"
    cidr_blocks     = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
 
  tags = {
    Name = "Web-SG"
  }
}



resource "aws_s3_bucket" "mybucket" {
  bucket = "myterraformproj"
}



resource "aws_instance" "web1" {
  ami = "ami-024e6efaf93d85776"
  instance_type = "t2.micro"
  security_groups = [aws_security_group.mysg.id]
  subnet_id = aws_subnet.subnet1.id 
  user_data = base64encode(file("userdata.sh"))
}


resource "aws_instance" "web2" {
  ami = "ami-024e6efaf93d85776"
  instance_type = "t2.micro"
  security_groups = [aws_security_group.mysg.id]
  subnet_id = aws_subnet.subnet2.id 
  user_data = base64encode(file("userdata1.sh"))
}

resource "aws_lb" "myalb" {
  name = "myalb"
  internal = false 
  load_balancer_type = "application"
  security_groups = [aws_security_group.mysg.id]
  subnets = [aws_subnet.subnet1.id, aws_subnet.subnet2.id]
  tags = {
    Name: "web"
  }
}

resource "aws_lb_target_group" "target_group" {
  name = "myTargetGroup"
  port = 80
  protocol = "HTTP"
  vpc_id = aws_vpc.myvpv.id 
  health_check {
    path = "/"
    port = "traffic-port"
  }
}

resource "aws_lb_target_group_attachment" "attach1" {
  target_group_arn = aws_lb_target_group.target_group.arn
  target_id =  aws_instance.web1.id 
  port = 80
}


resource "aws_lb_target_group_attachment" "attach2" {
  target_group_arn = aws_lb_target_group.target_group.arn
  target_id =  aws_instance.web2.id 
  port = 80
}

resource "aws_lb_listener" "listener" {
  load_balancer_arn = aws_lb.myalb.arn 
  port = 80
  protocol = "HTTP"
  default_action {
    target_group_arn = aws_lb_target_group.target_group.arn
    type = "forward"
  }
}

output "loadbalancerdns" {
  value = aws_lb.myalb.dns_name
}
